2002-04-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPortNameServer.m: Improved warnings about launching
	gdomap.
	* Source/NSDistributedNotification.m: Improved warnings about
	launching gdnc.
	* Source/NSException.m: Log uncaught exceptions using NSLog()
	* Source/GSString.m: Applied fix by Malexander Malmberg for
	transmuting strings where the default encoding is not the same as
	the internal 8-bit encoding.
	* Source/Unicode.m: Logic fix for selecting strict conversion from
	unicode by Alexander Malmberg.

2002-04-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSXML.m: New method ([-nextElement]) to traverse
	tree skipping non-element nodes.  Also ([-childElement]) to get the
	first child element of a node.

Thu Apr 11 15:34:33 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/GSAttributedString.m ([GSMutableAttributedString
	-sanity]): Renamed to -_sanity, and changed so that we always
	compile this in so that regression testcases can use it.

2002-04-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Resources/GNUmakefile: install new language files.
	* Resources/Languages/Russion: language file added.
	* Resources/Languages/UkraineRussion: language file added.
	Added language files provided by Serg Stoyan <stoyan@on.com.ua>
	* Source/UnixFileHandle.m: Permit accept/connect on descriptors
	by default.
	* Source/WindowsFileHandle.m: ditto
	* Headers/Foundation/NSProcessInfo.h: Added MacOS-X operating system
	methods and enum
	* Source/NSProcessInfo.m: Added operating system methods and documented
	all methods for autogsdoc.

2002-04-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: Tidy initialisers for case where the default
	C-string encoding is not usable internally.
	* Source/NSLog.m: Try default cString encoding.
	* Tools/cvtenc.m: Add -EscapeIn and -EscapeOut flags to handle \u
	escapes in files.
	* Resources/Languages/Italian: Correct to use \u escapes
	* Resources/Languages/French: ditto.