@@ -145,6 +145,8 @@ static NSProcessInfo	*_gnu_sharedProcessInfoObject = nil;
 // Host name of the CPU executing the process
 static NSString		*_gnu_hostName = nil;   
 
+static const char	*_gnu_arg_zero = nil;
+
 // Current process name
 static NSString		*_gnu_processName = nil;
 
@@ -166,6 +168,8 @@ _gnu_process_args(int argc, char *argv[], char *env[])
 {
   NSAutoreleasePool	*arp = [NSAutoreleasePool new];
   int i;
+
+  _gnu_arg_zero = argv[0];
 
   /* Getting the process name */
   _gnu_processName = [[NSString stringWithCString: argv[0]] lastPathComponent];
@@ -810,4 +814,16 @@ GSEnvironmentFlag(const char *name, BOOL def)
     }
   return a;
 }
+
+const char*
+GSArgZero()
+{
+  if (_gnu_arg_zero == 0)
+    [NSProcessInfo class];
+  if (_gnu_arg_zero == 0)
+    return "";
+  else
+    return _gnu_arg_zero;
+}
+
 
