@@ -4,7 +4,8 @@
 	gdomap.
 	* Source/NSDistributedNotification.m: Improved warnings about
 	launching gdnc.
-	* Source/NSException.m: Log uncaught exceptions using NSLog()
+	* Source/NSException.m: Log uncaught exceptions with executable name.
+	* Source/NSProcessInfo.m: New private function for exception msg.
 	* Source/GSString.m: Applied fix by Malexander Malmberg for
 	transmuting strings where the default encoding is not the same as
 	the internal 8-bit encoding.
